tests/errors/syntax.vir
// Tests for SyntaxError.  The parser emits these for tokens or token
// sequences that do not match the grammar.

// An @ sign is not a valid token anywhere in a type annotation.
mod BadTypeToken {
    // CHECK: Syntax Error
    incoming inp : @ async

    outgoing out : Bit async

    out := true
}

// A bare integer cannot begin a type name.
mod BadTypeName {
    outgoing out : Bit async

    // CHECK: Syntax Error
    incoming inp : 123bad async

    out := true
}

// A perfectly valid module sitting next to broken ones — it must not
// contribute any additional syntax errors of its own.
mod ValidNeighbor {
    incoming data : Word[8] async

    outgoing out  : Word[8] async

    // CHECK-NOT: Unresolved type
    out := data
}

mod RegMissingOn {
    incoming clock : Clock

    reg not_missing : Bit on clock
    reg missing : Bit
}

// CHECK: Check failed
